# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2022-2026 Seagate Technology LLC and/or its Affiliates, All Rights Reserved
#
option('tools', type : 'array', choices : [
  'Basics',
  'Configure',
  'Defect',
  'Erase',
  'Firmware',
  'Format',
  'GenericTests',
  'Info',
  'Logs',
  'NVMe',
  'PassthroughTest',
  'PowerControl',
  'Raw',
  'Reservations',
  'Security',
  'SMART',
  'ZBD'
])
option('tcg', type : 'feature', value : 'disabled')
option('libc_musl', type : 'boolean', value : false)
#openSeaChest_Security can set the password, however this is not enabled by default
option('json_outputformat', type : 'boolean', value : true, description : 'Enable JSON output format for openSeaChest. Not all outputs are supported yet, but this is a start for the most popular options to output JSON formatted data to the screen.')
option('use_system_json', type : 'boolean', value : false, description : 'Try to use system-installed json-c library. Attempts pkg-config and find_library, falls back to subproject if not found.')
#because enabling it may make the system unable to boot, the drive may not show up
#in the OS if it DOES boot or if the drive it hotplugged in, or it may not be possible
#for the user to enter the password they have set because the system, BIOS, or HBA has
#sent the ATA security freeze-lock command to the drive.
#if you really want to enable this option, you can do it, but you have been warned!
option('atasecsetpass', type : 'feature', value : 'disabled')
option('cc-suggest-attribute', type : 'boolean', value : false, description : 'Enable warnings where the compiler can suggest various attributes to be applied to functions for optimization and correctness.')
